# These files will end up in the install include directory
# For example, /usr/local/include
includedir = $(prefix)/include/mle

include_HEADERS = \
	$(top_srcdir)/../../common/src/foundation/mle/3danim.h \
	$(top_srcdir)/../../common/src/foundation/mle/3dchar.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleActorClass.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleActorGC.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleActor.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleDirector.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleDso.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleEvent.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleEventDispatcher.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleGroupClass.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleGroup.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleLoad.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleMediaRefClass.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleMediaRefConverter.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleMediaRef.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleMonitor.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleNotifier.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleOpcode.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleObject.h \
	$(top_srcdir)/../../common/src/foundation/mle/MlePq.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleProperty.h \
	$(top_srcdir)/../../common/src/foundation/mle/MlePropDataset.h \
	$(top_srcdir)/../../common/src/foundation/mle/MlePtrArray.h \
	$(top_srcdir)/../../common/src/foundation/mle/MlePtrContainer.h \
	$(top_srcdir)/../../common/src/foundation/mle/MlePtrDict.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleRoleClass.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleRole.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleRuntime.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleSceneClass.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleScene.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleScheduler.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleSetClass.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleSet.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleStageClass.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleStageFuncs.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleStage.h \
	$(top_srcdir)/../../common/src/foundation/mle/MleTables.h \
	$(top_srcdir)/../../common/src/foundation/mle/MlePlatformData.h \
	$(top_srcdir)/../../common/src/input/mle/MleKeyboardEvent.h \
	$(top_srcdir)/../../common/src/input/mle/MleKeyboardPolled.h \
	$(top_srcdir)/../../common/src/input/mle/MleKeyMap.h \
	$(top_srcdir)/../../common/src/input/mle/MleMouseEvent.h \
	$(top_srcdir)/../../common/src/input/mle/MleMousePolled.h
